# Inria_Variold_FiberClustering

./: CMakeLists.txt  MSmeasure_GFA_Sub1_test50fib  Tracts_Sub1_VTK_test50fib.fib  compute_gramiam_varifolds.cpp  compute_varifold_using_EP_and_MSmeasure.cpp
